force-app/main/default/objects/Form_Submission__c/fields/Wants_to_Ensure_Partner_Max_Benefit__c.field-meta.xml
<CustomField>
    <fullName>Wants_to_Ensure_Partner_Max_Benefit__c</fullName>
    <label>Wants to Ensure Partner Max Benefit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>