force-app/main/default/objects/Form_Submission__c/fields/Wants_to_Provide_Gift_Card_for_Referral__c.field-meta.xml
<CustomField>
    <fullName>Wants_to_Provide_Gift_Card_for_Referral__c</fullName>
    <label>Wants to Provide Gift Card for Referral</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>