force-app/main/default/objects/Form_Submission__c/fields/Wants_to_Set_Conditions_on_Inheritance__c.field-meta.xml
<CustomField>
    <fullName>Wants_to_Set_Conditions_on_Inheritance__c</fullName>
    <label>Wants to Set Conditions on Inheritance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>