force-app/main/default/objects/Form_Submission__c/fields/What_did_you_experience_as_a_barrier__c.field-meta.xml
<CustomField>
    <fullName>What_did_you_experience_as_a_barrier__c</fullName>
    <label>What did you experience as a barrier?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advisor mismatch</fullName>
            </value>
            <value>
                <fullName>Offer/promotion confusion</fullName>
            </value>
            <value>
                <fullName>Pricing concerns</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>