force-app/main/default/objects/Form_Submission__c/fields/Would_you_like_to_elaborate__c.field-meta.xml
<CustomField>
    <fullName>Would_you_like_to_elaborate__c</fullName>
    <label>Would you like to elaborate?</label>
    <type>TextArea</type>
</CustomField>