force-app/main/default/objects/Form_Submission__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Source__c</columns>
    <columns>Type__c</columns>
    <columns>External_ID__c</columns>
    <columns>Lead__c</columns>
    <columns>Account__c</columns>
    <columns>Campaign__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>