force-app/main/default/objects/Form_Submission__c/listViews/Customer_Satisfaction_Surveys.listView-meta.xml
<ListView>
    <fullName>Customer_Satisfaction_Surveys</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Overall_Experience_Rating__c</columns>
    <columns>Communication_Rating__c</columns>
    <columns>Likelihood_to_Recommend__c</columns>
    <columns>Suggestions_for_Improvement__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Customer Satisfaction Survey</value>
    </filters>
    <label>Customer Satisfaction Surveys</label>
</ListView>