force-app/main/default/objects/Form_Submission__c/listViews/Danish_TM_Yesterday.listView-meta.xml
<ListView>
    <fullName>Danish_TM_Yesterday</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Source__c</columns>
    <columns>Type__c</columns>
    <columns>External_ID__c</columns>
    <columns>Lead__c</columns>
    <columns>Account__c</columns>
    <columns>Comments__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Lecture Registration Form</value>
    </filters>
    <filters>
        <field>Market_Unit__c</field>
        <operation>equals</operation>
        <value>DFJ_DK,Testamente_DK</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>YESTERDAY</value>
    </filters>
    <label>Danish TM Yesterday</label>
</ListView>