force-app/main/default/objects/Form_Submission__c/listViews/Form_Submissions_with_Customer_Profiles.listView-meta.xml
<ListView>
    <fullName>Form_Submissions_with_Customer_Profiles</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Customer_Profile__c</columns>
    <columns>Source__c</columns>
    <columns>Type__c</columns>
    <columns>External_ID__c</columns>
    <columns>Lead__c</columns>
    <columns>Account__c</columns>
    <columns>Campaign__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Customer_Profile__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Form Submissions with Customer Profiles</label>
</ListView>