force-app/main/default/objects/Form_Submission__c/listViews/Lecture_Registration_Form_Submissions.listView-meta.xml
<ListView>
    <fullName>Lecture_Registration_Form_Submissions</fullName>
    <columns>CREATED_DATE</columns>
    <columns>Market_Unit__c</columns>
    <columns>NAME</columns>
    <columns>Source__c</columns>
    <columns>Type__c</columns>
    <columns>External_ID__c</columns>
    <columns>Lead__c</columns>
    <columns>Account__c</columns>
    <columns>Comments__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Lecture Registration Form</value>
    </filters>
    <label>Lecture Registration Form Submissions</label>
</ListView>