force-app/main/default/objects/Form_Submission__c/listViews/Marketing_Cloud_Form_Submissions.listView-meta.xml
<ListView>
    <fullName>Marketing_Cloud_Form_Submissions</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Source__c</columns>
    <columns>Type__c</columns>
    <columns>External_ID__c</columns>
    <columns>Contact__c</columns>
    <columns>Lead__c</columns>
    <columns>Campaign__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Marketing Cloud Form Submission</value>
    </filters>
    <label>Marketing Cloud Form Submissions</label>
</ListView>