force-app/main/default/objects/Form_Submission__c/listViews/Questionnaires.listView-meta.xml
<ListView>
    <fullName>Questionnaires</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>External_ID__c</columns>
    <columns>Lead__c</columns>
    <columns>Account__c</columns>
    <columns>Marital_Status__c</columns>
    <columns>Has_Children_Under_18__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Questionnaire</value>
    </filters>
    <label>Questionnaires</label>
</ListView>