force-app/main/default/objects/Form_Submission__c/listViews/Referral_Program.listView-meta.xml
<ListView>
    <fullName>Referral_Program</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Full_Name__c</columns>
    <columns>Email__c</columns>
    <columns>Source__c</columns>
    <columns>Type__c</columns>
    <columns>External_ID__c</columns>
    <columns>Lead__c</columns>
    <columns>Account__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Referral</value>
    </filters>
    <label>Referral Program</label>
</ListView>